app/styles/_widgets.scss
@import "base";

a, a:hover, a:visited {
  text-decoration: none
}

.widget{
  font-size: $font-size-small;
  
  .widget-header{
    font-size: $font-size-normal;
    font-weight: bold;
    height: 30px;  
    color: $title-color;
    border-bottom: $title-line-color 1px solid;
    
    .wrapper{
      padding: 4px 15px;
    }
  }
  
  .widget-controls {
    float:right;
  }
  
  .widget-content{
    .wrapper{
      table{
        width: 100%;
      }
      
      .title{
        font-weight: bold;
      }
    }
  }
}

.widget.add {
  .widget-content{    
    display: table;
    width: 100%;
    height: 100%;
    padding-top: 30px;
    
    .wrapper{
      font-weight: bold;   
      background-color: $add-widget-color;
      display: table-cell;
      vertical-align: middle;
      text-align: center;
      cursor: pointer;
      transition: background 0.4s ease;
      
      &:hover{
        background: $table-bg-hover;
        transition: 0.4s background ease;
        color: $link-hover-color;
        transition: 0.4s color ease;  
      }
    }
  }
}

.table {
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        border-top: 0;
        
        &:first-child{
          text-align: left;    
          padding-left: 20px;
        }
        
        &:last-child{
          text-align: right;
          padding-right: 20px;
        }
      }
    }
  }
}

.font{
	background: #fafafa;
}

.back{
  .widget-header{
    border-bottom: none;
    
    .title-text {
      color: $link-color;
    }
  }
  
  .widget-content{
    padding: 15px;
    
    .widget-settings{
      .form-header, .form-control, .btn{
        font-size: $font-size-small;
      }
      
      .form-header{
        font-weight: normal;
        color: $modal-text-color;
      }
      
      .form-control, .btn{
        height: 28px;
      }
      
      input.form-control{
        padding: 5px 12px;
      }
      
      .dropdown-menu{
        font-size: $font-size-small;
        padding: 2px 0;
      }
    }
  }
}


.btn-default i{
  color: #333333;
}

handle, i{
  color: $icon-color;
}

i.clickable{
  cursor: pointer;
}

handle, .clickable{
  &:hover{
    color: $link-hover-color;
  }
}


.widget-controls {
  handle, i{
    margin-left: 8px;
  }
  
  handle {
    cursor: move;
  }
}

.widget-title{
  i{
    color: $title-color;
  }
}

.title-icon {
  margin-right: 8px;
}

.widget-content {
  .loading{
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    text-align: center;
    font-weight: bold;
  }
}

/* circle chart */
.circle {
  width: 90px;
  height: 90px;
  border-radius: 45px;
  font-size: 22px;
  color: white;
  line-height: 90px;
  text-align: center;
  background: #1b517b
}

#occupation{
  #value, #chart{
    position: absolute;
    left: 50%;
    top: 50%;
  }
  
  #value{
    margin-top: -45px;
    margin-left: -45px;
    z-index: 1020;
    
    span{   
      font-size: $font-size-small;
      position: absolute;
      top: -3px;
      right: 18px;
    }
  }
  
  #chart{
    margin-top: -60px;
    margin-left: -60px;
    z-index: 1010;
  }
}

.table#stats {
  tr {
    > th,
    > td {
      &:last-child{
          text-align: left;
          padding-right: auto;
        }
    }

    > th{
      background-color: #7f888f;
      color: white;
    }
  }
}

#graph {
  .grid, #chart{
    position: absolute;
    top: 50%;
  }

  .grid{
    border-bottom: 1px dashed rgba(38,143,138,0.3);
    width: 100%;
    margin-top: -37px;
  }

  #chart{
    left: 50%;
    margin-top: -70px;
    margin-left: -105px;
  }
}

.difference {
  background-color: #25a49d; /* fallback color */
  @include background-image(linear-gradient(#24beb4, #268f8a));
  height: 65px;
  width: 100%;
  position: absolute;
  bottom: 35px; 
  display: table;

  > div {
    display: table-cell;
    width: 50%;
    color: white;
    text-align: center;
    vertical-align: middle;

    .number, .quantity{
      font-size: $font-size-big;

      i {
        color: white;
        position: relative;
        top: 2px;
      }

      i,span{
        font-size: 16px;
      }
    }
    
    .scale, .quality{
      font-size: $font-size-xsmall;
    }

    .number {
      font-weight: bold;
    }
  } 
}


/* icons */

.fa-star.clickable{
  &:hover{ color: $link-color;}
  &.selected{ color: $link-hover-color; }
}


/* flip */

.widget {
	position: relative;

	-webkit-perspective: 600px;
	-moz-perspective: 600px;
	perspective: 600px;
}
/* -- make sure to declare a default for every property that you want animated -- */
/* -- general styles, including Y axis rotation -- */
.widget .front {
	float: none;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1001;
	width: inherit;
	height: inherit;
	background: white;

	-webkit-transform: rotateX(0deg) rotateY(0deg);
	-moz-transform: rotateX(0deg) rotateY(0deg);
	transform: rotateX(0deg) rotateY(0deg);

	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
	transform-style: preserve-3d;

	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;

	/* -- transition is the magic sauce for animation -- */
	-webkit-transition: all .4s ease-in-out;
	transition: all .4s ease-in-out;
}
.widget.flip .front {
	z-index: 1001;

	-webkit-transform: rotateY(180deg);
	-moz-transform: rotateY(180deg);
	transform: rotateY(180deg);

	box-shadow: 0 15px 50px rgba(0,0,0,0.2);
}

.widget .back {
	float: none;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1000;
	width: inherit;
	height: inherit;

	-webkit-transform: rotateY(-180deg);
	-webkit-transform-style: preserve-3d;
	-webkit-backface-visibility: hidden;

	-moz-transform: rotateY(-180deg);
	-moz-transform-style: preserve-3d;
	-moz-backface-visibility: hidden;

	transform: rotateY(-180deg);
	transform-style: preserve-3d;
	backface-visibility: hidden;

	/* -- transition is the magic sauce for animation -- */
	-webkit-transition: all .4s ease-in-out;
	transition: all .4s ease-in-out;
}

.widget.flip .back {
	z-index: 1002;
	background: $table-bg-accent;

	-webkit-transform: rotateX(0deg) rotateY(0deg);
	-moz-transform: rotateX(0deg) rotateY(0deg);
	transform: rotateX(0deg) rotateY(0deg);
}

